--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -190,6 +190,7 @@ nav: # 导航栏
 
   - News / 新闻:
       - Series 2 - 系列 2:
+          - 2.6.18: news/2.6.18/News.md
           - 2.6.17: news/2.6.17/News.md
           - 2.6.16: news/2.6.16/News.md
           - 2.6.15: news/2.6.15/News.md
