--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -151,11 +151,11 @@ nav: # 导航栏
           - 1.1 安装 tkintertools: tutorials/1-1.md
           - 1.2 认识 tkintertools: tutorials/1-2.md
           - 1.3 tkintertools 初体验: tutorials/1-3.md
-      - 第二章：容器控件: tutorials/2-1.md
+      - 第二章：容器控件: undone.md
         # - Tk
         # - Toplevel
         # - Canvas
-      - 第三章：功能控件: tutorials/3-1.md
+      - 第三章：功能控件: undone.md
         # - Label
         # - Button
         # - CheckButton
@@ -164,25 +164,25 @@ nav: # 导航栏
         # - ProgressBar
         # - Switch
         # - ToolTip
-      - 第四章：界面布局: tutorials/4-1.md
+      - 第四章：界面布局: undone.md
         # - Place
         # - Slide
       - 第五章：图片:
           - 5.1 静态图片: tutorials/5-1.md
           - 5.2 动态图片: tutorials/5-2.md
           - 5.3 图片进阶: tutorials/5-3.md
-      - 第六章：动画以及颜色效果: tutorials/6-1.md
-        # - Animation
-        # - color
+      - 第六章：动画以及颜色效果:
+          - 6.1 颜色效果: tutorials/6-1.md
+          - 6.2 动画制作: tutorials/6-2.md
       - 第七章：3D 子模块:
           - 7.1 3D 对象: tutorials/7-1.md
           - 7.2 3D 文本: tutorials/7-2.md
           - 7.3 3D 动画: tutorials/7-3.md
           - 7.4 3D 进阶: tutorials/7-4.md
-      - 第八章：杂项: tutorials/8-1.md
+      - 第八章：杂项: undone.md
         # - 学会一些实用的小技巧
         # - 混合使用 tkinter
-      - 第九章：实战: tutorials/9-1.md
+      - 第九章：实战: undone.md
         # - 手把手实战教学
         # - 引导式实战教学
         # - 实战项目推荐
