--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -110,32 +110,28 @@ theme: # 主题设置
     - toc.follow # 锚点关注，侧边栏自动滚动，使锚点总是可见
     # - toc.integrate # 右边侧栏是否集成到左侧边栏
   palette:
-    # Palette toggle for automatic mode
+    # 系统主题
     - media: "(prefers-color-scheme)"
       toggle:
         icon: material/brightness-auto
         name: 切换至亮色主题
-
-    # Palette toggle for light mode
+    # 亮色主题
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: white # 明亮标题栏颜色
+      # primary: grey # 明亮标题栏颜色
       accent: pink # 明亮链接高亮颜色
       toggle:
         icon: material/brightness-7
         name: 切换至暗色主题
-
-    # Palette toggle for dark mode
+    # 暗色主题
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
       primary: black # 黑暗标题栏颜色
-      accent: yellow # 黑暗链接高亮颜色
+      # accent: yellow # 黑暗链接高亮颜色
       toggle:
         icon: material/brightness-4
         name: 切换至系统主题
-  font: # 字体
-    text: Microsoft YaHei # 文本
-    code: consolas # 代码
+  font: false # 避免从谷歌加载字体导致网页加载变慢
   logo: logo.png # 页面左上角徽标
   favicon: logo.png # 网页的图标
   icon:
@@ -171,6 +167,13 @@ extra_javascript: # 保证数学表达式能正确显示的运行时环境
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
+extra_css:
+  - css/extra.css
+  # - https://cdn.jsdelivr.net/npm/lxgw-wenkai-webfont@1.1.0/style.css
+  # - https://cdn.jsdelivr.net/npm/lxgw-wenkai-lite-webfont@1.1.0/style.css
+  # - https://cdn.jsdelivr.net/npm/lxgw-wenkai-tc-webfont@1.0.0/style.css
+  - https://cdn.jsdelivr.net/npm/lxgw-wenkai-screen-webfont@1.1.0/style.css # 自定义字体（霞鹜文楷）
+
 plugins: # 插件
   - offline:
       enabled: !ENV [OFFLINE, false]
@@ -185,8 +188,11 @@ plugins: # 插件
       type: datetime # 每页底下显示最后更新日期（除开 index）
       locale: zh # 换成中文显示
   - git-authors # 需 pip install mkdocs-git-authors-plugin
+  - changelog # 需 pip install mkdocs-changelog-plugin
   - glightbox # 图像缩放，需 pip install mkdocs-glightbox
-  - statistics # 统计信息，需 pip install mkdocs-statistics-plugin
+  - statistics: # 统计信息，需 pip install mkdocs-statistics-plugin
+      codelines_per_minute: 15 # 每分钟可看的代码行数
+      words_per_minute: 150 # 每分钟可看的文本数
 
 nav: # 导航栏
   - Home / 主页:
