--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: tkintertools # 站点名称
 site_url: https://Xiaokang2022.github.io/tkintertools/ # 站点链接
 repo_url: https://github.com/Xiaokang2022/tkintertools # 仓库地址
 repo_name: Xiaokang2022/tkintertools # 仓库名称
-edit_uri: edit/master/docs/ # 编辑地址（页面会出现编辑按钮）
+edit_uri: edit/docs/docs/ # 编辑地址（页面会出现编辑按钮）
 site_description: Data Structures and Algorithms and Numerical Calculation Methods # 站点描述
 site_author: Xiaokang2022 # 站点作者
 copyright: Copyright &copy; 2024 Xiaokang2022 # 版权信息（会出现在左下角）
@@ -180,6 +180,9 @@ extra: # 额外设定
     - icon: fontawesome/brands/python # PyPI 页面链接
       link: https://pypi.org/project/tkintertools/
       name: PyPI
+    - icon: fontawesome/brands/bilibili # 哔哩哔哩
+      link: https://space.bilibili.com/498105668
+      name: 哔哩哔哩
     - icon: fontawesome/solid/house
       link: https://xiaokang2022.github.io/tkintertools/
       name: 主页
